--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KID'S SCHOOL</title>
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
-<body>
-    
+<body class="quicksand-font">
+    <header>
+        <nav class="navbar display-flex ">                
+                    <div class="logo">
+                        <img src="assets/logo.png" alt="">
+                    </div>
+                   <h1 class="nav-title">SCHOOL</h1>
+                
+                <div class="menu">
+                    <ul class="nav-items display-flex justify-content">
+                        <!-- li.nav-item*4>a.nav-link -->
+                        <li class="nav-item ">
+                         <a href="" class="nav-link item-1">Home</a>
+                     </li>
+                        <li class="nav-item">
+                         <a href="" class="nav-link item-2">About</a>
+                     </li>
+                        <li class="nav-item">
+                      <a href="" class="nav-link item-3">Facilities</a>
+                     </li>
+                        <li class="nav-item">
+                     <a href="" class="nav-link item-4">Admission</a>
+                 </li>
+                     </ul>
+                      </div>
+
+                      <ul><button class="nav-btn">Contact</button></ul>
+
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
