added the banner

--- a/index.html
+++ b/index.html
@@ -22,20 +22,37 @@
                          <a href="" class="nav-link item-1">Home</a>
                      </li>
                         <li class="nav-item">
-                         <a href="" class="nav-link item-2">About</a>
+                         <a href="" class="nav-link color-2 semibold-font">About</a>
                      </li>
                         <li class="nav-item">
-                      <a href="" class="nav-link item-3">Facilities</a>
+                      <a href="" class="nav-link color-3 semibold-font">Facilities</a>
                      </li>
                         <li class="nav-item">
-                     <a href="" class="nav-link item-4">Admission</a>
+                     <a href="" class="nav-link color-4 semibold-font">Admission</a>
                  </li>
                      </ul>
                       </div>
 
                       <ul><button class="nav-btn">Contact</button></ul>
-
         </nav>
+
+       <div class="banner-container">
+          
+        <div class="banner">
+            <h1 class="banner-title">
+                <span class="color-1">Empowering</span> <br>
+             <span >students from small <br> age</span> 
+             <span class="color-2">towards vision</span></h1>
+
+             <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+             <button class="banner-btn">Enroll Now</button>
+         </div>
+
+         <div class="banner-img">
+            <img src="assets/hero-kids.png" alt="">
+          </div>
+        
+       </div>
     </header>
     <main>
 
