update the code

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                       </div>
 
                       <ul><button class="nav-btn">Contact</button></ul>
+
+                     <img src="assets/list.png" alt="" class="menu-icon">
         </nav>
 
        <div class="banner-container">
