--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                       <ul><button class="nav-btn">Contact</button></ul>
 
                      <img src="assets/list.png" alt="" class="menu-icon">
-        </nav>
 
+        </nav>
+        <div class="navbar-line"></div>
        <div class="banner-container">
           
         <div class="banner">
