--- a/index.html
+++ b/index.html
@@ -58,7 +58,85 @@
        </div>
     </header>
     <main>
+       <!-- Standard Curriculum -->
+        <div class="curriculam-container">
+            <h1 class="curriculam-title">Standard Curriculum</h1>
+  
+            <!-- section.curriculam-box-*3>img+ h1.curriculam-text+p.curriculam-dsecription+btn -->
+            <div class="curriculam-boxes">
 
+               <section class="curriculam-box-1">
+                <img class="curriculam-img" src="assets/kinder.png" alt="">
+                <h1 class="curriculam-text">Kinder (3-6) Years</h1>
+                <p class="curriculam-dsecription">Empowering young minds with creativity, discovery, and growth.</p>
+                <p class="color-2  curriculam-btn">Read More</p>
+               </section>
+
+               <section class="curriculam-box-2">
+                <img class="curriculam-img" src="assets/elementary.png" alt="">
+                <h1 class="curriculam-text">Elementary School</h1>
+                <p class="curriculam-dsecription">Let’s grow, learn, and have fun in our exciting journey ahead!</p>
+                <p class="color-1  curriculam-btn">Read More</p>
+               </section>
+
+               <section class="curriculam-box-3">
+                <img class="curriculam-img" src="assets/middle.png" alt="">
+                <h1 class="curriculam-text">Middle (10-16) Years</h1>
+                <p class="curriculam-dsecription">Together, we’ll grow, succeed, and make lasting memories</p>
+                <p class="color-5 curriculam-btn">Read More</p>
+               </section>
+            </div>
+            <div class="icon-arrow">
+                <div class="icon-btn">
+                    <p class="icon-text"> < </p>
+                  </div>
+                  <div class="icon-btn">
+                      <p class="icon-text"> > </p>
+                  </div>
+            </div>
+        </div>
+       
+        <div class="stories">
+            <h1 class="story-title">Our Stories</h1>
+            <div class="stories-images">
+                <div class="story-img">
+        <img src="assets/story-1.png" alt="" class="main-img"><br>
+        <button>November 19, 2019</button>
+        <h2>A fun toddler coloring training on
+            classroom</h2>
+            <p>Beautiful branding for changes by Never Now in Australia.
+                changes is a platform for open discussion in an inclusive and
+                collaborative environment, providing the...</p>
+                </div>
+                <div class="story-pictures">
+              <!-- div.story-pic*4>img.story-pic+btn.story-btn+p.story-text -->
+              <div class="story-pic">
+                <img src="assets/story-2.png" alt="" class="story-pic"><br>
+                <button class="story-btn">November 19, 2019</button>
+                <h3 class="story-text">Find out if a school fits the
+                    family’s needs</h3>
+              </div>
+              <div class="story-pic">
+                <img src="assets/story-3.png" alt="" class="story-pic"><br>
+                <button class="story-btn">November 19, 2019</button>
+                <h3 class="story-text">Summer math & literacy
+                    centres for kids</h3>
+              </div>
+              <div class="story-pic">
+                <img src="assets/story-4.png" alt="" class="story-pic"><br>
+                <button class="story-btn">September 10, 2019</button>
+                <h3 class="story-text">Classroom management
+                    techniques for new tutors</h3>
+              </div>
+              <div class="story-pic">
+                <img src="assets/story-5.png" alt="" class="story-pic"><br>
+                <button class="story-btn">July 19, 2019</button>
+                <h3 class="story-text">Conversation rhymes
+                    improve kids listening</h3>
+              </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
