--- a/index.html
+++ b/index.html
@@ -98,48 +98,64 @@
        
         <div class="stories">
             <h1 class="story-title">Our Stories</h1>
-            <div class="stories-images">
-                <div class="story-img">
-        <img src="assets/story-1.png" alt="" class="main-img"><br>
-        <button>November 19, 2019</button>
-        <h2>A fun toddler coloring training on
-            classroom</h2>
-            <p>Beautiful branding for changes by Never Now in Australia.
-                changes is a platform for open discussion in an inclusive and
-                collaborative environment, providing the...</p>
+
+            <div class="our-story">
+
+                <div class="stories-images">
+
+                    <div class="story-img">
+            <img src="assets/story-1.png" alt="" class="main-img"><br>
+            <button class="story-btn color-6 ">November 19, 2019</button>
+            <h2>A fun toddler coloring training on
+                classroom</h2>
+                <p>Beautiful branding for changes by Never Now in Australia.
+                    changes is a platform for open discussion in an inclusive and
+                    collaborative environment, providing the...</p>
+                    </div>
+                    
+                    <div class="story-pictures">
+                  <!-- div.story-pic*4>img.story-pic+btn.story-btn+p.story-text -->
+                  <div class="story-pic">
+                    <img src="assets/story-2.png" alt="" class="story-pic"><br>
+                    <button class="story-btn color-7">November 19, 2019</button>
+                    <h3 class="story-text">Find out if a school fits the
+                        family’s needs</h3>
+                  </div>
+                  <div class="story-pic">
+                    <img src="assets/story-3.png" alt="" class="story-pic"><br>
+                    <button class="story-btn color-8">November 19, 2019</button>
+                    <h3 class="story-text">Summer math & literacy
+                        centres for kids</h3>
+                  </div>
+                  <div class="story-pic">
+                    <div class="img-container">
+                        <img src="assets/story-4.png" alt="" class="story-pic"><br>                            
+                    </div>
+                    <button class="story-btn color-7">September 10, 2019</button>  
+                    <h3 class="story-text">Classroom management
+                        techniques for new tutors</h3>
+                  </div>
+
+                  <div class="story-pic">
+                    <img src="assets/story-5.png" alt="" class="story-pic"><br>
+                    <button class="story-btn color-7">July 19, 2019</button>
+                    <h3 class="story-text">Conversation rhymes
+                        improve kids listening</h3>
+                  </div>
+
+                    </div>
                 </div>
-                <div class="story-pictures">
-              <!-- div.story-pic*4>img.story-pic+btn.story-btn+p.story-text -->
-              <div class="story-pic">
-                <img src="assets/story-2.png" alt="" class="story-pic"><br>
-                <button class="story-btn">November 19, 2019</button>
-                <h3 class="story-text">Find out if a school fits the
-                    family’s needs</h3>
               </div>
-              <div class="story-pic">
-                <img src="assets/story-3.png" alt="" class="story-pic"><br>
-                <button class="story-btn">November 19, 2019</button>
-                <h3 class="story-text">Summer math & literacy
-                    centres for kids</h3>
-              </div>
-              <div class="story-pic">
-                <img src="assets/story-4.png" alt="" class="story-pic"><br>
-                <button class="story-btn">September 10, 2019</button>
-                <h3 class="story-text">Classroom management
-                    techniques for new tutors</h3>
-              </div>
-              <div class="story-pic">
-                <img src="assets/story-5.png" alt="" class="story-pic"><br>
-                <button class="story-btn">July 19, 2019</button>
-                <h3 class="story-text">Conversation rhymes
-                    improve kids listening</h3>
-              </div>
-                </div>
-            </div>
+
+            <div class="view-btn">View All</div>
         </div>
     </main>
     <footer>
 
+
+        <div class="marquee-container">
+            <p class="marquee-text">Welcome to Our school</p>
+        </div>
     </footer>
 </body>
 </html>
