--- a/index.html
+++ b/index.html
@@ -151,7 +151,35 @@
         </div>
     </main>
     <footer>
+    <div class="footer">
+        <section>
+          <div class="footer-img">
+            <img src="assets/logo.png" alt="">
+            <h1 class="footer-title">Kids
+                Education</h1>
+          </div>
+          <p  class="footer-description">Kid's School is a nurturing and creative learning environment where children grow through exploration, imagination, and discovery. Our mission is to inspire a lifelong love for learning while fostering confidence, curiosity, and kindness in every child.</p>
+        </section>
+        <section class="2nd section">
+        <h3>About School</h3>
+         <ul>
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Facilities</a>
+            <a href="">Admisiion</a>
+         </ul>
+        </section>
+        <section>
+         <h3>Keep In Touch</h3>
+         <div>
+            <img src="assets/fb.png" alt="">
+            <img src="assets/dribble.png" alt="">
+            <img src="assets/google+.png" alt="">
+            <img src="assets/twitter.png" alt="">
+         </div>
+        </section>
 
+    </div>
 
         <div class="marquee-container">
             <p class="marquee-text">Welcome to Our school</p>
